--- a/src/configs/ndt2.yaml
+++ b/src/configs/ndt2.yaml
@@ -8,11 +8,17 @@ encoder:
   # Mask spikes
   masker:
     active: true         
-    mode: timestep      # full to zero out randomly in the featue matrix. timestep to zero out randomly full timesteps. 
-    ratio: 0.3          # ratio of data to predict
+    mode: full   #timestep    # full to zero out randomly in the featue matrix. timestep to zero out randomly full timesteps. 
+    ratio: 0.1       #0.3     # ratio of data to predict
     zero_ratio: 1.0     # of the data to predict, ratio of zeroed out
     random_ratio: 1.0   # of the not zeroed, ratio of randomly replaced
-    n_time_steps: 50   # num of time bins
+    n_time_steps: 100   # num of time bins
+
+  patcher:
+    active: true       
+    space_patch_size: 64
+    time_patch_size: 1
+    time_stride: null
 
   # Context available for each timestep
   context:
@@ -21,9 +27,8 @@ encoder:
 
   # Embedding layer
   embedder:
-    n_channels: 16        # number of neurons recorded 
-    max_space_F: 15     # max feature len in space dimension
-    max_time_F: 50       # max feature len in time dimension
+    n_neurons: 668
+    n_timesteps: 100
     max_spikes: 0         # max number of spikes in a single time bin
 
     mode: linear          # linear/embed/identity
@@ -35,22 +40,24 @@ encoder:
     bias: true            # use bias in the embedding layer
     dropout: 0.2          # dropout in embedding layer
 
+    n_cls_tokens: 1       # number of [cls] tokens for downstream tasks, e.g., behavior/region decoding
+
 
   # Transformer
   transformer:
     use_space: true       # apply spatial transformer
     use_time: true        # apply temporal transformer
     n_layers: 5           # number of transformer layers
-    hidden_size: 1024     # hidden space of the transformer
+    hidden_size: 256      #1024     # hidden space of the transformer
 
     n_heads: 8            # number of attentiomn heads
     attention_bias: true  # learn bias in the attention layers
 
     act: gelu             # activiation function in mlp layers
-    inter_size: 1024      # intermediate dimension in the mlp layers
+    inter_size: 1024       #1024      # intermediate dimension in the mlp layers
     mlp_bias: true        # learn bias in the mlp layers
     
-    dropout: 0.4          # dropout in transformer layers
+    dropout: 0.2 #0.4          # dropout in transformer layers
     fixup_init: true      # modify weight initialization
 
 decoder:
