--- a/src/configs/itransformer_multi.yaml
+++ b/src/configs/itransformer_multi.yaml
@@ -2,12 +2,12 @@ model_class: iTransformer
 
 
 encoder:
-  from_pt: /expanse/lustre/scratch/zwang34/temp_project/iTransformer/checkpoints/test_zs_30/best
+  from_pt: null # /expanse/lustre/scratch/zwang34/temp_project/iTransformer/checkpoints/test_zs_30/best
 
   masker: 
     force_active: True
     mode: neuron        # masking mode
-    ratio: 0.1          # ratio of data to predict
+    ratio: 0.3          # ratio of data to predict
     zero_ratio: 1.0     # of the data to predict, ratio of zeroed out
     random_ratio: 1.0   # of the not zeroed, ratio of randomly replaced
     expand_prob: 0.0    # probability of expanding the mask in ``temporal`` mode
@@ -25,13 +25,13 @@ encoder:
     dropout: 0.2
     max_n_bins: 100
 
-  hidden_size: 1024
+  hidden_size: 512
   activation: relu          
   bias: true
   dropout: 0.4
   n_heads: 8
   n_layers: 5
-  max_n_channels: 0        # 0 to skip channel embeddings
+  max_n_channels: 300        # 0 to skip channel embeddings
   embed_region: true
   neuron_regions: null       # not used in iTransformer_multi
   attn_mode: all       # all, inter-region, inter-region-switch, intra-region, mix_sequence, mix_multihead, mix_sample
@@ -40,7 +40,7 @@ encoder:
   attn_mix_ratio: [0.25, 0.25, 0.5] # inter : intra : all, should add up to 1 (mix_sample)
 
 decoder:
-  from_pt: /expanse/lustre/scratch/zwang34/temp_project/iTransformer/checkpoints/test_zs_30/best
+  from_pt: null # /expanse/lustre/scratch/zwang34/temp_project/iTransformer/checkpoints/test_zs_30/best
   mlp_decoder: true
   activation: relu
   use_cls: false
