--- a/src/configs/itransformer_multi_sl.yaml
+++ b/src/configs/itransformer_multi_sl.yaml
@@ -26,12 +26,12 @@ encoder:
     max_n_bins: 100
 
   hidden_size: 512
-  activation: relu          
+  activation: relu
   bias: true
   dropout: 0.4
   n_heads: 8
   n_layers: 5
-  max_n_channels: 0        # 0 to skip channel embeddings
+  max_n_channels: 1000        # 0 to skip channel embeddings
   embed_region: true
   neuron_regions: null       # not used in iTransformer_multi
   attn_mode: all       # all, inter-region, inter-region-switch, intra-region, mix_sequence, mix_multihead, mix_sample
@@ -41,6 +41,6 @@ encoder:
 
 decoder:
   from_pt: null
-  mlp_decoder: true  # or it will be a linear decoder
+  mlp_decoder: false  # or it will be a linear decoder
   activation: relu
-  use_cls: true
+  use_cls: false
