--- a/src/configs/trainer_iTransformer_multi_sl.yaml
+++ b/src/configs/trainer_iTransformer_multi_sl.yaml
@@ -11,11 +11,11 @@ wandb:
   use: True
   entity: wdk0082
   project: iTransformer_multi
-  run_name: test_choice_mlp_30
+  run_name: test_choice_671c_pool+linear
 
 # Logging directories
 dirs:
-  log_dir: /expanse/lustre/scratch/zwang34/temp_project/iTransformer/checkpoints/test_choice_mlp_30 # save models
+  log_dir: /expanse/lustre/scratch/zwang34/temp_project/iTransformer/checkpoints/test_choice_671c_pool+linear # save models
   dataset_cache_dir: /expanse/lustre/scratch/zwang34/temp_project/iTransformer/checkpoints/datasets_cache  # save dataset cache
   dataset_dir: neurofm123/671c7ea7-6726-4fbe-adeb-f89c2c8e489b_aligned # not used in multi-session training.
   huggingface_org: neurofm123
@@ -27,8 +27,8 @@ dirs:
 
 # Training configuration
 training:
-  num_epochs: 500
-  train_batch_size: 32
+  num_epochs: 300
+  train_batch_size: 16
   test_batch_size: 128  
   shuffle_test_dataloader: false    # Shuffle test dataloader between epochs
 
@@ -100,7 +100,7 @@ method:
 
 optimizer:
   gradient_accumulation_steps: 1
-  lr: 1.e-4
+  lr: 1.e-5
   wd: 1
   eps: 1.e-8
   warmup_pct: 0.15 # cosine/linear
