train_eval update

--- a/src/configs/trainer_iTransformer_multi.yaml
+++ b/src/configs/trainer_iTransformer_multi.yaml
@@ -11,7 +11,7 @@ wandb:
   use: True
   entity: wdk0082
   project: iTransformer_multi
-  run_name: test_neuron_baseline3
+  run_name: null
 
 # Logging directories
 dirs:
@@ -29,7 +29,7 @@ dirs:
 training:
   num_epochs: 1000
   train_batch_size: 16
-  test_batch_size: 500  
+  test_batch_size: 16  
   shuffle_test_dataloader: false    # Shuffle test dataloader between epochs
 
   save_plot_every_n_epochs: 5  # Plot the model output every n epochs
