--- a/src/configs/ndt1_v0/trainer_ndt1_v0.yaml
+++ b/src/configs/ndt1_v0/trainer_ndt1_v0.yaml
@@ -1,7 +1,7 @@
 seed: 42
 
 savestring: test
-wandb_project: iTransformer_multi
+wandb_project: ndt1_v0
 log_to_wandb: false
 
 verbosity: 0
@@ -10,12 +10,12 @@ verbosity: 0
 wandb:
   use: True
   entity: wdk0082
-  project: iTransformer_multi
-  run_name: test_zs_30
+  project: ndt1_v0
+  run_name: null
 
 # Logging directories
 dirs:
-  log_dir: /expanse/lustre/scratch/zwang34/temp_project/iTransformer/checkpoints/test_zs_30 # save models
+  log_dir: /expanse/lustre/scratch/zwang34/temp_project/iTransformer/checkpoints/test_neuron_baseline3 # save models
   dataset_cache_dir: /expanse/lustre/scratch/zwang34/temp_project/iTransformer/checkpoints/datasets_cache  # save dataset cache
   dataset_dir: neurofm123/671c7ea7-6726-4fbe-adeb-f89c2c8e489b_aligned # not used in multi-session training.
   huggingface_org: neurofm123
@@ -27,9 +27,9 @@ dirs:
 
 # Training configuration
 training:
-  num_epochs: 500
-  train_batch_size: 32
-  test_batch_size: 500  
+  num_epochs: 1000
+  train_batch_size: 16
+  test_batch_size: 16  
   shuffle_test_dataloader: false    # Shuffle test dataloader between epochs
 
   save_plot_every_n_epochs: 5  # Plot the model output every n epochs
@@ -41,7 +41,7 @@ training:
 # Model configuration. 
 # Will be passed to the model __init__  method if a model is not passed to the Trainer __init__ method.
 model: 
-  model_class: iTransformer   # Any registered model class name.
+  model_class: NDT1   # Any registered model class name.
 
 # Data configuration.
 data:
@@ -62,7 +62,7 @@ data:
   use_lograte: True # use lograte
 
   max_time_length: 100    # max_time_length has to be a multiple of time patch size
-  max_space_length: 600   # max_space_length has to be a multiple of space patch size
+  max_space_length: 668   # max_space_length has to be a multiple of space patch size
   patching: false # patching the neurons
   sort_by_depth: false
   sort_by_region: false
