--- a/src/configs/itransformer_multi.yaml
+++ b/src/configs/itransformer_multi.yaml
@@ -16,7 +16,7 @@ encoder:
     mask_regions: ['all']       # brain regions to mask in ``inter-region`` mode
     target_regions: ['all']    # brain regions to predict in ``intra-region`` mode
     n_mask_regions: 1       # number of regions to choose from the list of mask_regions or target_regions
-    causal_zero: false       # only for iTransformer causal mode
+    causal_zero: True       # only for iTransformer causal mode
     timesteps: null          # for forward prediction
 
   embedder:
