--- a/src/configs/ndt1_v0/ndt1_v0.yaml
+++ b/src/configs/ndt1_v0/ndt1_v0.yaml
@@ -19,6 +19,7 @@ encoder:
     mask_regions: ['all']       # brain regions to mask in ``inter-region`` mode
     target_regions: ['all']    # brain regions to predict in ``intra-region`` mode
     n_mask_regions: 1       # number of regions to choose from the list of mask_regions or target_regions
+    causal_zero: False    # not used in ndt1
     
   # Context available for each timestep
   context:
