--- a/src/configs/ndt1_v0/ndt1_v0.yaml
+++ b/src/configs/ndt1_v0/ndt1_v0.yaml
@@ -9,7 +9,7 @@ encoder:
   masker:
     force_active: true         
     mode: temporal      # masking mode
-    ratio: 0.1          # ratio of data to predict
+    ratio: 0            # ratio of data to predict
     zero_ratio: 1.0     # of the data to predict, ratio of zeroed out
     random_ratio: 1.0   # of the not zeroed, ratio of randomly replaced
     expand_prob: 0.0    # probability of expanding the mask in ``temporal`` mode
@@ -84,7 +84,7 @@ encoder:
 
   # Projection to factor space
   factors:  
-    active: true  # project from hidden_size to factors
+    active: false  # project from hidden_size to factors
     size: 32                  # factors size  
     act: relu                 # activation function after projecting to factors
     bias: true                # use bias in projection to factors
