--- a/src/configs/multi_region/ndt1_v0.yaml
+++ b/src/configs/multi_region/ndt1_v0.yaml
@@ -34,7 +34,7 @@ encoder:
     eps: 1.e-7                  # avoid dividing by zero when normalizing padded spikes     
     white_noise_sd: 1.0         # gaussian noise added to the inputs  1.0 originally
     constant_offset_sd: 0.2     # gaussian noise added to the inputs but contsnat in the time dimension 0.2 originally
-
+    
 
   # Embedding layer
   embedder:
@@ -46,7 +46,7 @@ encoder:
     mode: linear          # linear/embed/identity
     mult: 2               # embedding multiplier. hiddden_sizd = n_channels * mult
     adapt: false          # adapt the embedding layer for each day
-    pos: false             # embed position 
+    pos: true             # embed position 
     act: softsign         # activation for the embedding layers
     scale: 1              # scale the embedding multiplying by this number
     bias: true            # use bias in the embedding layer
@@ -65,17 +65,18 @@ encoder:
 
   # Transformer
   transformer:
-    n_layers: 5           # number of transformer layers
-    hidden_size: 512     # hidden space of the transformer
+    n_layers: 3           # number of transformer layers
+    hidden_size: 128     # hidden space of the transformer
     use_scalenorm: false  # use scalenorm  instead of layernorm
     use_rope: false       # use rotary postional encoding
     rope_theta: 10000.0   # rope angle of rotation
+
 
     n_heads: 8            # number of attentiomn heads
     attention_bias: true  # learn bias in the attention layers
 
     act: gelu             # activiation function in mlp layers
-    inter_size: 2048      # intermediate dimension in the mlp layers
+    inter_size: 512      # intermediate dimension in the mlp layers
     mlp_bias: true        # learn bias in the mlp layers
     
     dropout: 0.4          # dropout in transformer layers
