--- a/src/configs/multi_region/trainer_ndt1_v0.yaml
+++ b/src/configs/multi_region/trainer_ndt1_v0.yaml
@@ -1,7 +1,7 @@
 seed: 42
 
 savestring: test
-wandb_project: ndt1_v0
+wandb_project: multi_region
 log_to_wandb: false
 
 verbosity: 0
@@ -10,7 +10,7 @@ verbosity: 0
 wandb:
   use: True
   entity: wdk0082
-  project: ndt1_v0
+  project: multi_region
   run_name: null
 
 # Logging directories
@@ -62,15 +62,15 @@ data:
   use_lograte: True # use lograte
 
   max_time_length: 100    # max_time_length has to be a multiple of time patch size
-  max_space_length: None   # max_space_length has to be a multiple of space patch size
+  max_space_length: 668   # max_space_length has to be a multiple of space patch size
   patching: false # patching the neurons
   sort_by_depth: false
   sort_by_region: false
   brain_region: all
   spike_augmentation: false
 
-  include_behav: false # include behavior data
-  target: choice
+  include_behav: false # include behavior data (not used)
+  target: choice 
 
   load_meta: true
 
@@ -79,27 +79,25 @@ data:
 
   split_method: session_based # random_split/session_based
 
-  use_aligned_test: False
-
 # Method configuration. Contains kwargs that are specific to the training method.
 method:
 
   # Passed to the model __init__ method together with the model config
   model_kwargs: 
-    method_name: ssl #ssl/sl 
+    method_name: sl #ssl/sl 
     use_lograte: true
     
-    loss: poisson_nll   # poisson_nll/mse/ordinal/huber/simple_ordinal
+    loss: cross_entropy   # poisson_nll/mse/ordinal/huber/simple_ordinal
     huber_loss_beta: 0.1
     
-    # the following two values would be automatically set (output_size needs to be set manually for other sl approach).
+    # the following two values would be automatically set
     ordinal_loss_ncls: None   # ordinal
-    output_size: None  # simple_ordinal 
+    output_size: 2  # simple_ordinal 
     
     bin_size: 10  # DeTime segmentation bin size (sec)
 
     # one and only one of the following should be true for sl
-    clf: false
+    clf: true
     reg: false
     ord_reg: false
 
@@ -110,8 +108,8 @@ method:
 
 optimizer:
   gradient_accumulation_steps: 1
-  lr: 1.e-4
-  wd: 0.01
+  lr: 1.e-3
+  wd: 0.1
   eps: 1.e-8
   warmup_pct: 0.15 # cosine/linear
   gamma: 0.95     # step
